samples/_failures_safe/1761074722_8e5086_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27f2d6f4.c: In function ‘main’:
./samples/SAFE/__tmp_27f2d6f4.c:150:17: error: expected expression at end of input
  150 |                 } else if (status == -1)
      |                 ^
./samples/SAFE/__tmp_27f2d6f4.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27f2d6f4.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27f2d6f4.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27f2d6f4.c:150:17: error: expected declaration or statement at end of input
